# Emberfire

./: .clang-format  .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
auth/: .env.example  CLAUDE.md  auth_server.js  db_init.sql  docker-compose.yml  package.json
client/: CLAUDE.md  CMakeLists.txt  CrashHandler.h  Files.h  Geo2d.h  Logger.h  Math.h  Rand.h  StringHelpers.h  Vector.h
client/Detours/: detours.h
client/SqlConnector/: QueryResult.h  SqlConnector.h
client/addons/EmberHealthBar/: EmberHealthBar.lua  EmberHealthBar.toc
client/src/: Abilities.cpp  Abilities.h  AnchoredPosition.cpp  AnchoredPosition.h  Application.cpp  Application.h  Assets.cpp  Assets.h  AudioDeviceNotifier.h  AuraAnimation.cpp  AuraAnimation.h  Bank.cpp  Bank.h  BuffDebuffRenderer.cpp  BuffDebuffRenderer.h  Button.cpp  Button.h  ButtonScript.cpp  ButtonScript.h  CastBar.cpp  CastBar.h  CharacterCreation.cpp  CharacterCreation.h  CharacterSelection.cpp  CharacterSelection.h  ChatBubble.cpp  ChatBubble.h  ClientGameObj.cpp  ClientGameObj.h  ClientMap.cpp  ClientMap.h  ClientNpc.cpp  ClientNpc.h  ClientObject.cpp  ClientObject.h  ClientObjectOverhead.h  ClientObjectOverheads.cpp  ClientPlayer.cpp  ClientPlayer.h  ClientUnit.cpp  (+194 more)
client/src/lua/: LuaEngine.cpp  LuaEngine.h  LuaEvents.h  LuaFrameManager.cpp  LuaFrameManager.h  LuaUI.h
client/tests/: CMakeLists.txt  test_placeholder.cpp
client/ui/: Abilities.lua  ActionBar.lua  AuraRenderer.lua  Bank.lua  CharCreate.lua  CharSelect.lua  DialogNpc.lua  EmberUI.lua  EmberUI.toc  Equipment.lua  GameChat.lua  GuildRoster.lua  HudButtons.lua  HudChrome.lua  Inventory.lua  LayoutEditor.lua  LevelupNotify.lua  LoadingScreen.lua  LoginScreen.lua  LootWindow.lua  Minimap.lua  PlayerAuras.lua  Popups.lua  QuestComplete.lua  QuestLog.lua  QuestObjectives.lua  QuestOffer.lua  Trade.lua  UnitFrameTemplate.lua  UnitFrames.lua  Vendor.lua  XPBar.lua  ZoneNotification.lua
cmake/: dependencies.cmake  googletest.cmake  shared_link.cmake
docs/: CLIENT_CHANGES.md  GHIDRA_FINDINGS.md  GHIDRA_PROTOCOL.md  GHIDRA_STATS.md  GHIDRA_WORLD.md  LUA_VERSIONS.md  OPCODES.md  OPCODES_CLIENT.md  PROTOCOL.md  SERVER_BACKEND.md  SHARED_INTERFACE.md  VERIFY_TODO.md
scripts/: run.ps1
server/: CLAUDE.md  CMakeLists.txt  README.md
server/src/: main.cpp
server/tests/: CMakeLists.txt  test_placeholder.cpp
shared/: CLAUDE.md  CMakeLists.txt
shared/include/Emberfire/Shared/: AccountDefines.h  CharacterDefines.h  ChatDefines.h  Commands.h  Conditions.h  Config.h  CooldownHolder.h  DmystVersion.h  GameDefines.h  GameMap.h  GameObjDefines.h  GamePacketClient.h  GamePacketServer.h  GamePackets_Stubs.h  Geo2d.h  GuildDefines.h  ItemAffix.h  ItemDefiner.h  ItemDefines.h  ItemTemplate.h  MapCellT.h  MapLogic.h  Md5.h  MutualObject.h  MutualUnit.h  NpcDefines.h  PlayerDefines.h  QuestDefines.h  ScriptDefines.h  SfSocket.h  SpellDefines.h  StlBuffer.h  UnitDefines.h  Util.h
shared/tests/: CMakeLists.txt  test_attributes.cpp  test_chat.cpp  test_item.cpp  test_opcodes.cpp  test_worlderror.cpp
tools/capture/: CLAUDE.md  analyze.js  cls.js  cm.js  ehist.js  enum_dump.js  npcflag.js  p77.js  proxy.js  pull.js  schema_dump.js  slide.js  sp.js  v6.js  vdec.js  we.js  xtab.js
